--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@devexpress/dx-react-scheduler-material-ui": "^4.0.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@faker-js/faker": "^7.6.0",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
@@ -15,8 +16,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "faker": "^6.6.6",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "use-local-storage": "^2.3.6",
