--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.2.0",
     "use-local-storage": "^2.3.6",
     "web-vitals": "^2.1.4"
   },
